# qbscript

./: .gitignore  LICENSE  README.md  qbscript.cabal  stack.yaml
app/: Main.hs
docs/: qbsyntax.md
src/Compiler/QbScript/: AST.hs  CodeGen.hs  Parser.hs
src/Data/GH3/: QB.hs
test/: Spec.hs
test/Compiler/QbScript/CodeGen/: Tests.hs
test/Compiler/QbScript/Parser/: Gen.hs  Tests.hs
