name:                qbscript
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adituv/qbscript#readme
license:             BSD3
license-file:        LICENSE
author:              Iris Ward
maintainer:          aditu.venyhandottir@gmail.com
copyright:           2016 Iris Ward
category:            Compilers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Compiler.QbScript.AST
                     , Compiler.QbScript.CodeGen
                     , Compiler.QbScript.Parser
                     , Data.GH3.QB
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , digest
                     , hxt-unicode
                     , megaparsec
                     , mtl
                     , packer
                     , scientific
  default-language:    Haskell2010

executable qbscript-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , megaparsec
                     , qbscript
                     , text
  default-language:    Haskell2010

test-suite qbscript-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Compiler.QbScript.CodeGen.Tests
                     , Compiler.QbScript.Parser.Gen
                     , Compiler.QbScript.Parser.Tests
  build-depends:       base
                     , bytestring
                     , containers
                     , hspec
                     , hspec-megaparsec
                     , megaparsec
                     , packer
                     , qbscript
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adituv/qbscript
